--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,21 @@ doc/manual/manual.log
 doc/manual/manual.out
 doc/manual/manual.pdf
 doc/manual/manual.toc
-
-.DS_Store
-.classpath
-.idea/
-.project
 out/
-autoweka/
+
+# Eclipse
+.classpath
+.project
+.settings/
+ 
+# Intellij
+.idea/
+*.iml
+*.iws
+ 
+# Mac
+.DS_Store
+ 
+# Maven
+log/
+target/
