--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,15 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>snaplogic-autoweka</id>
+			<url>https://raw.github.com/sanchai-snap/autoweka-repo/</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
-			<groupId>com.snaplogic</groupId>
+			<groupId>com.snaplogic.datascience</groupId>
 			<artifactId>smac</artifactId>
 			<version>2.0.0</version>
 		</dependency>
@@ -39,12 +45,12 @@
 			<version>3.6.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.snaplogic</groupId>
+			<groupId>com.snaplogic.datascience</groupId>
 			<artifactId>aeatk</artifactId>
 			<version>2.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.snaplogic</groupId>
+			<groupId>com.snaplogic.datascience</groupId>
 			<artifactId>fastrf</artifactId>
 			<version>1.0.0</version>
 		</dependency>
@@ -67,6 +73,11 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
+			<version>2.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
 			<version>2.5.2</version>
 		</dependency>
 		<dependency>
